git revert using

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <h4>heading 4</h4>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam accusamus repellendus non molestias sit! Odit, repellendus delectus quibusdam eum blanditiis tenetur voluptatibus assumenda, tempora, deleniti nisi asperiores. Fugiat at esse voluptas officia itaque quisquam, suscipit adipisci placeat molestiae eius magni?</p>
     <p>Lorem, ipsum dolor.</p>
-    <span>hello span</span>
-    <h2>this is h2 tag</h2>
+    <h3>h3 tag use for revert command</h3>
 </body>
 </html>
