--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>GitInit</h1>
-    <h3>git revert</h3>
-    <h4>heading 4</h4>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam accusamus repellendus non molestias sit! Odit, repellendus delectus quibusdam eum blanditiis tenetur voluptatibus assumenda, tempora, deleniti nisi asperiores. Fugiat at esse voluptas officia itaque quisquam, suscipit adipisci placeat molestiae eius magni?</p>
-    <p>Lorem, ipsum dolor.</p>
-    <h3>h3 tag use for revert command</h3>
+    <h1>Brach Second</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, aliquam! Enim officiis quaerat rerum laborum!</p>
 </body>
 </html>
